--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-
+    <h2>Next collection</h2>
     <p id="landfill" class="hidden">It's landfill</p>
     <p id="green" class="hidden">It's green!</p>
     <script src="js/luxon.min.js" charset="utf-8"></script>
