--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <style media="screen">
-      p.hidden {
-        display: none;
-      }
-    </style>
+    <title>St Albans Garbage Collection</title>
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
-    <h2>Next collection</h2>
-    <p id="landfill" class="hidden">It's landfill</p>
-    <p id="green" class="hidden">It's green!</p>
+    <div class="container">
+      <h1>Next collection</h1>
+      <p id="landfill" class="hidden">It's landfill</p>
+      <p id="green" class="hidden">It's green!</p>
+    </div>
+
     <script src="js/luxon.min.js" charset="utf-8"></script>
     <script src="js/data.js" charset="utf-8"></script>
     <script src="js/index.js" charset="utf-8"></script>
